--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mkdirp": "^0.5.1",
     "mpvue-loader": "^2.0.0",
     "mpvue-template-compiler": "^2.0.0",
