fix: 我的评论页修改

--- a/src/app.json
+++ b/src/app.json
@@ -16,6 +16,11 @@
     "pages/consult/list/main",
     "pages/consult/detail/main",
     "pages/consult/home/main",
+    "pages/knowledge/article/detail/main",
+    "pages/knowledge/vedio/detail/main",
+    "pages/knowledge/list/main",
+    "pages/expert/detail/main",
+    "pages/student/detail/main",
     "pages/manager/home/main",
     "pages/contact-us/main",
     "pages/logs/main",
