--- a/src/app.json
+++ b/src/app.json
@@ -6,6 +6,7 @@
     "pages/my/detail/main",
     "pages/my/follow/main",
     "pages/my/comment/main",
+    "pages/my/message/main",
     "pages/my/consult/main",
     "pages/my/test/main",
     "pages/follow/list/main",
@@ -19,6 +20,7 @@
     "pages/knowledge/article/detail/main",
     "pages/knowledge/vedio/detail/main",
     "pages/knowledge/list/main",
+    "pages/score/detail/main",
     "pages/expert/detail/main",
     "pages/student/detail/main",
     "pages/manager/home/main",
