--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "echarts": "^4.2.1",
     "js-md5": "^0.7.3",
     "moment": "^2.24.0",
     "mpvue": "^2.0.0",
+    "vue-filter-bar": "^1.0.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -66,6 +68,7 @@
     "mpvue-template-compiler": "^2.0.0",
     "mpvue-webpack-target": "^1.0.3",
     "mpvue-zanui": "^1.0.3",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "portfinder": "^1.0.13",
@@ -75,6 +78,7 @@
     "px2rpx-loader": "^0.1.10",
     "relative": "^3.0.2",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
