feat： 心理档案筛选2

--- a/src/app.json
+++ b/src/app.json
@@ -9,6 +9,9 @@
     "pages/my/message/main",
     "pages/my/consult/main",
     "pages/my/test/main",
+    "pages/my/warn/main",
+    "pages/my/record/list/main",
+    "pages/my/record/detail/main",
     "pages/follow/list/main",
     "pages/follow/detail/main",
     "pages/test/list/main",
@@ -21,6 +24,7 @@
     "pages/knowledge/vedio/detail/main",
     "pages/knowledge/list/main",
     "pages/score/detail/main",
+    "pages/score/edit/main",
     "pages/expert/detail/main",
     "pages/student/detail/main",
     "pages/manager/home/main",
