--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-md5": "^0.7.3",
     "moment": "^2.24.0",
     "mpvue": "^2.0.0",
+    "mpvue-echarts": "^0.3.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
