feat: 测试结果页路由添加

--- a/src/app.json
+++ b/src/app.json
@@ -16,6 +16,7 @@
     "pages/follow/detail/main",
     "pages/test/list/main",
     "pages/test/detail/main",
+    "pages/test/result/main",
     "pages/test/home/main",
     "pages/consult/list/main",
     "pages/consult/detail/main",
