--- a/src/app.json
+++ b/src/app.json
@@ -28,8 +28,7 @@
     "pages/student/detail/main",
     "pages/manager/home/main",
     "pages/contact-us/main",
-    "pages/logs/main",
-    "pages/counter/main"
+    "pages/logs/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
