feat: 用户登录逻辑

--- a/src/app.json
+++ b/src/app.json
@@ -16,6 +16,7 @@
     "pages/test/detail/main",
     "pages/test/result/main",
     "pages/test/home/main",
+    "pages/test/edit/main",
     "pages/consult/list/main",
     "pages/consult/detail/main",
     "pages/consult/home/main",
