--- a/src/cloudfunctions/knowledge-base/package.json
+++ b/src/cloudfunctions/knowledge-base/package.json
@@ -9,6 +9,7 @@
     "author": "takeheartYing",
     "license": "ISC",
     "dependencies": {
-      "wx-server-sdk": "latest"
+      "wx-server-sdk": "latest",
+      "tcb-router": "latest"
     }
   }
