--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
+    "tcb-router": "^1.1.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "vue-style-loader": "^4.1.0",
@@ -88,7 +89,8 @@
     "webpack-dev-middleware-hard-disk": "^1.12.0",
     "webpack-merge": "^4.1.0",
     "webpack-mpvue-asset-plugin": "^2.0.0",
-    "webpack-mpvue-vendor-plugin": "^2.0.0"
+    "webpack-mpvue-vendor-plugin": "^2.0.0",
+    "wx-server-sdk": "^0.5.1"
   },
   "engines": {
     "node": ">= 4.0.0",
