--- a/src/app.json
+++ b/src/app.json
@@ -29,6 +29,7 @@
     "pages/expert/detail/main",
     "pages/student/detail/main",
     "pages/manager/home/main",
+    "pages/middle-login/main",
     "pages/contact-us/main",
     "pages/logs/main"
   ],
